--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <td><h1><a href="about.html">ABOUT</a></h1></td>
   </tr>
 </table>
-    <hr size="3" noshades>
+    <hr size="3" noshade>
 
     <img src="logo.png" alt="PC KING logo image" style="width:900px;height:500px;">
       <h1>The king of the computer market</h1>
       </center>
-       <hr size="3" noshades>
+       <hr size="3" noshade>
       <center>
 <h1>Check our <a href="reviews.html">reviews</h1></h1>
 </center>
